Fixed overflowing text (breaking the responsive nature of the design)

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -204,7 +204,7 @@ td.does-not-support { color: $red-500; }
   margin:20px 0 0 0;
 }
 
-.code-snippet {
+.wrap-text {
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
